### 1.3
- Use get_search_query() to populate the search parameters into the JavaScript
- Altered plugin to load the default search page
- Deprecated cf_google_custom_search_form() function in favor of just using the standard search form
- Lightened server load by stopping default WP search because we're completely overriding it. (props VIP support)

### 1.2.2
- Added additional security

### 1.2.1
- Added IDs to the search form to allow it to get the default styles from WordPress

### 1.2
- Now creates search results div defined in PARENT variable.

### 1.1
- Modified for easier configuration options.
- Added README.txt
- Added CHANGELOG.txt